--- a/Authorization.Core.UI/Areas/Authorization/Pages/V5/User/Create.cshtml
+++ b/Authorization.Core.UI/Areas/Authorization/Pages/V5/User/Create.cshtml
@@ -7,8 +7,8 @@
 <div class="row">
     <div class="col-sm-4 text-center text-sm-start">
         <h2>@ViewData["Title"]</h2>
-        <hr />
     </div>
+    <hr class="mt-1 mb-3" />
 </div>
 <form id="formCreate" method="post">
     <div class="row">
