Provide bootstrap.bundle.js client-side library for users of the Authorization.Core.UI NuGet package.

--- a/Authorization.Core.UI.Test.Web/Areas/Admin/Pages/Shared/_Layout.cshtml
+++ b/Authorization.Core.UI.Test.Web/Areas/Admin/Pages/Shared/_Layout.cshtml
@@ -60,7 +60,7 @@
     </footer>
 
     <script type="text/javascript" src="~/lib/jquery/dist/jquery.min.js" asp-append-version="true"></script>
-    <script type="text/javascript" src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js" asp-append-version="true"></script>
+    <script type="text/javascript" src="~/_content/CRFricke.Authorization.Core.UI/lib/bootstrap/js/bootstrap.bundle.min.js" asp-append-version="true"></script>
     <script type="text/javascript" src="~/_content/CRFricke.Authorization.Core.UI/lib/datatables/datatables.min.js" asp-append-version="true"></script>
     <script type="text/javascript" src="~/_content/CRFricke.Authorization.Core.UI/lib/luxon/luxon.min.js" asp-append-version="true"></script>
     <script type="text/javascript" src="~/js/site.js" asp-append-version="true"></script>
