Add Document Management page.

--- a/Authorization.Core.UI.Test.Web/Areas/Admin/Pages/Index.cshtml
+++ b/Authorization.Core.UI.Test.Web/Areas/Admin/Pages/Index.cshtml
@@ -20,6 +20,12 @@
                 Allows you to manage the calendar events displayed on the web site.
             </dd>
             <dt class="col-sm-2 text-sm-right">
+                <a asp-area="Admin" asp-page="/Document/Index">Document</a>
+            </dt>
+            <dd class="col-sm-10">
+                Allows you to manage the documents displayed on the web site.
+            </dd>
+            <dt class="col-sm-2 text-sm-right">
                 <a asp-area="Authorization" asp-page="/Role/Index">Roles</a>
             </dt>
             <dd class="col-sm-10">
