--- a/Authorization.Core.UI.Test.Web/Areas/Admin/Pages/Shared/_Layout.cshtml
+++ b/Authorization.Core.UI.Test.Web/Areas/Admin/Pages/Shared/_Layout.cshtml
@@ -33,6 +33,9 @@
                             <a class="nav-link" asp-area="Admin" asp-page="/Calendar/Index">Calendar</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" asp-area="Admin" asp-page="/Document/Index">Document</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" asp-area="Authorization" asp-page="/Role/Index">Role</a>
                         </li>
                         <li class="nav-item">
