--- a/Authorization.Core.UI/Areas/Authorization/Pages/V5/User/Index.cshtml
+++ b/Authorization.Core.UI/Areas/Authorization/Pages/V5/User/Index.cshtml
@@ -3,10 +3,13 @@
 @{
     ViewData["Title"] = "User Management";
 
-    var classCreate = (await AuthManager.IsAuthorizedAsync(User, SysClaims.User.Create)) ? "" : "disabled";
-    var classDelete = (await AuthManager.IsAuthorizedAsync(User, SysClaims.User.Delete)) ? "" : "disabled";
-    var classDetails = (await AuthManager.IsAuthorizedAsync(User, SysClaims.User.Read)) ? "" : "disabled";
-    var classEdit = (await AuthManager.IsAuthorizedAsync(User, SysClaims.User.Update)) ? "" : "disabled";
+    var path = HttpContext.Request.Path.Value;
+    var basePath = path[..path.LastIndexOf('/')];
+
+    var classCreate = (await AuthManager.IsAuthorizedAsync(User, SysClaims.User.Create)) ? null : "disabled";
+    var classDelete = (await AuthManager.IsAuthorizedAsync(User, SysClaims.User.Delete)) ? null : "disabled";
+    var classDetails = (await AuthManager.IsAuthorizedAsync(User, SysClaims.User.Read)) ? null : "disabled";
+    var classEdit = (await AuthManager.IsAuthorizedAsync(User, SysClaims.User.Update)) ? null : "disabled";
 }
 <div class="row align-items-center">
     <div class="col-sm-4 text-center text-sm-start">
@@ -20,7 +23,11 @@
 <div class="row">
     <div class="col-lg-11 col-xxl-8 mx-sm-3 pe-sm-4">
         <p>
-            <a class="@classCreate" asp-page="Create">Create New</a>
+            <a class="ac-anchor @classCreate" href="@($"{basePath}/Create")"
+            @if (classCreate != null)
+            {
+                @:tabindex="-1" aria-disabled="true"
+            }>Create New</a>
         </p>
         <table class="table table-sm w-100 opacity-0">
             <thead>
@@ -63,12 +70,24 @@
                             @Html.DisplayFor(modelItem => item.AccessFailedCount)
                         </td>
                         <td>
-                            <a class="bi bi-pencil-square ac-icon-button @classEdit" 
-                                asp-page="./Edit" asp-route-id="@item.Id" title="Edit" aria-label="Edit" />
+                            <a class="bi bi-pencil-square ac-icon-button @classEdit"
+                            @if (classEdit != null)
+                            {
+                                @:tabindex="-1" aria-disabled="true"
+                            }
+                               href="@($"{basePath}/Edit?id={item.Id}")" title="Edit" aria-label="Edit" />
                             <a class="bi bi-binoculars ac-icon-button @classDetails"
-                               asp-page="./Details" asp-route-id="@item.Id" title="View" aria-label="View" />
+                            @if (classDetails != null)
+                            {
+                                @:tabindex="-1" aria-disabled="true"
+                            }
+                               href="@($"{basePath}/Details?id={item.Id}")" title="View" aria-label="View" />
                             <a class="bi bi-trash ac-icon-button @classDelete"
-                               asp-page="./Delete" asp-route-id="@item.Id" title="Delete" aria-label="Delete" />
+                            @if (classDelete != null)
+                            {
+                                @:tabindex="-1" aria-disabled="true"
+                            }
+                               href="@($"{basePath}/Delete?id={item.Id}")" title="Delete" aria-label="Delete" />
                         </td>
                     </tr>
                 }
