--- a/Authorization.Core.UI/assets/BS5/css/site.css
+++ b/Authorization.Core.UI/assets/BS5/css/site.css
@@ -16,10 +16,21 @@
     display: inline-block;
     font-size: 1.2rem;
     margin-left: .5rem;
+    text-decoration: none;
 }
 
 .ac-icon-button::before {
     vertical-align: baseline;
+}
+
+.ac-icon-button.disabled, .ac-icon-button:disabled {
+    pointer-events: none;
+    opacity: 50%;
+}
+
+.ac-anchor.disabled, .ac-anchor:disabled {
+    pointer-events: none;
+    opacity: 50%;
 }
 
 .form-floating > .ac-textarea-tall {
