Hide nav links to pages the user is not authorized to use.

--- a/Authorization.Core.UI.Test.Web/Areas/Admin/Pages/Index.cshtml
+++ b/Authorization.Core.UI.Test.Web/Areas/Admin/Pages/Index.cshtml
@@ -1,4 +1,6 @@
 ﻿@page
+@using CRFricke.Authorization.Core
+@inject IAuthorizationManager authManager
 @model Authorization.Core.UI.Test.Web.Areas.Admin.Pages.IndexModel
 @{
     ViewData["Title"] = "Administration";
@@ -13,30 +15,42 @@
 <div class="row">
     <div class="col">
         <dl class="row">
+        @if (await authManager.IsAuthorizedAsync(User, AppClaims.Calendar.List))
+        {
             <dt class="col-sm-2 text-sm-right">
                 <a asp-area="Admin" asp-page="/Calendar/Index">Calendar</a>
             </dt>
             <dd class="col-sm-10">
                 Allows you to manage the calendar events displayed on the web site.
             </dd>
+        }
+        @if (await authManager.IsAuthorizedAsync(User, AppClaims.Document.List))
+        {
             <dt class="col-sm-2 text-sm-right">
                 <a asp-area="Admin" asp-page="/Document/Index">Document</a>
             </dt>
             <dd class="col-sm-10">
                 Allows you to manage the documents displayed on the web site.
             </dd>
+        }
+        @if (await authManager.IsAuthorizedAsync(User, SysClaims.Role.List))
+        {
             <dt class="col-sm-2 text-sm-right">
                 <a asp-area="Authorization" asp-page="/Role/Index">Roles</a>
             </dt>
             <dd class="col-sm-10">
                 Allows you to add and delete Roles. Also allows you to assign claims to the roles.
             </dd>
+        }
+        @if (await authManager.IsAuthorizedAsync(User, SysClaims.User.List))
+        {
             <dt class="col-sm-2 text-sm-right">
                 <a asp-area="Authorization" asp-page="/User/Index">Users</a>
             </dt>
             <dd class="col-sm-10">
                 Allows you to add and delete Users. Also allows you to assign roles to the users.
             </dd>
+        }
         </dl>
     </div>
 </div>
