Fix Playwright test failures.

--- a/Authorization.Core.UI/Areas/Authorization/Pages/V5/Role/Index.cshtml
+++ b/Authorization.Core.UI/Areas/Authorization/Pages/V5/Role/Index.cshtml
@@ -3,8 +3,7 @@
 @{
     ViewData["Title"] = "Role Management";
 
-    var path = HttpContext.Request.Path.Value;
-    var basePath = path[..path.LastIndexOf('/')];
+    var basePath = Model.BasePath;
 
     var classCreate = (await AuthManager.IsAuthorizedAsync(User, SysClaims.Role.Create)) ? null : "disabled";
     var classDelete = (await AuthManager.IsAuthorizedAsync(User, SysClaims.Role.Delete)) ? null : "disabled";
